Team grid layout issue fixed

--- a/core/static/css/main.css
+++ b/core/static/css/main.css
@@ -19193,9 +19193,9 @@ body:not(.menu-open) .header__megamenu {
         max-width: 1194px;
     } */
 
-    .s-team__cards {
+    /* .s-team__cards {
         margin: 0 -20px;
-    }
+    } */
 
     .s-team__card-col {
         padding: 0 20px;
